<resources>
    <string name="app_name">KartApp</string>

    <string name="ERROR_UNEXPECTED">Um erro inesperado ocorreu. Tente novamente mais tarde.</string>
    <string name="ERROR_LOAD_TASK">Erro ao carregar a tarefa.</string>
    <string name="ERROR_INTERNET_CONNECTION">Conexão à internet necessária para uso da applicação.</string>

    <string name="task_updated">Tarefa atualizada com sucesso!</string>
    <string name="task_created">Tarefa criada com sucesso!</string>
    <string name="task_removed">Tarefa removida com sucesso!</string>

    <string name="nome">Nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="descricao">Descrição</string>
    <string name="prioridade">Prioridade</string>
    <string name="data_limite">Data Limite</string>
    <string name="update_task">Atualizar tarefa</string>
    <string name="clique_para_selecionar_a_data">Clique para selecionar a data limite</string>
    <string name="completa">Completa</string>
    <string name="adicionar_tarefa">Adicionar tarefa</string>
    <string name="sim">Sim</string>
    <string name="cancelar">Cancelar</string>
    <string name="remocao_de_tarefa">Remoção de tarefa</string>
    <string name="remover_tarefa">Remover tarefa?</string>
    <string name="nao_tem_uma_conta">Não tem uma conta?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="sair">Sair</string>
    <string name="expiradas">Expiradas</string>
    <string name="all_tasks">Tarefas</string>
    <string name="proximos_7_dias">Próximos 7 dias</string>
    <string name="home">Home</string>
    <string name="pilot">Piloto</string>
    <string name="time_lap">Tempo de Volta</string>
    <string name="lap">Volta</string>
    <string name="avarage_speed">Velocidade Média</string>
    <string name="lap_and_time_avarage">Volta e Velocidade Média</string>
    <string name="position_and_time_avarage">Posição e Velocidade média</string>
    <string name="time_race">Tempo de corrida</string>
    <string name="best_lap">Melhor Volta</string>
    <string name="position">Posição</string>
    <string name="laps_and_best_lap">Voltas Completas e Melhor Volta</string>
    <string name="time_plus">Tempo a mais</string>
    <string name="best_lap_of_race">Melhor Volta da Corrida</string>
    <string name="ok">ok</string>
    <string name="about">Sobre</string>

</resources>